--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,15 @@
 :root {
   /* Colors */
   --light-red: hsl(0, 100%, 67%);
+  --lighter-red: hsla(0, 100%, 67%, 5%);
   --orangey-yellow: hsl(39, 100%, 56%);
+  --orangeyer-yellow: hsla(39, 100%, 56%, 5%);
   --green-teal: hsl(166, 100%, 37%);
+  --greener-teal: hsla(166, 100%, 37%, 5%);
   --cobalt-blue: hsl(234, 85%, 45%);
 
   /* Gradients */
-  --Light-slate-blue: hsl(252, 100%, 67%); /* bacground gradient */
+  --light-slate-blue: hsl(252, 100%, 67%); /* bacground gradient */
   --light-royal-blue: hsl(241, 81%, 54%); /* background gradient */
   --violet-blue: hsla(256, 72%, 46%, 1); /* circle */
   --persian-blue: hsla(241, 72%, 46%, 0); /* circle */
@@ -20,7 +23,8 @@
 
 @font-face {
   font-family: "Hanken Grotesk";
-  src: url("/assets/fonts/HankenGrotesk-VariableFont_wght.ttf") format(".ttf");
+  src: url("/assets/fonts/HankenGrotesk-VariableFont_wght.ttf")
+    format("truetype");
   font-style: normal;
   font-weight: normal;
 }
@@ -34,10 +38,164 @@
 }
 
 body {
-  font-family: "Hanken Grotesk", sans-serif;
-  background: var(--cream);
-  height: 100vh;
+  font-family: "Hanken Grotesk";
+  min-height: 100vh;
   display: grid;
   place-items: center;
-  font-size: 16px;
+  align-content: center;
+  font-size: 14px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  max-width: 370px;
+  width: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* border-radius: 30px; */
+  background: var(--white);
+}
+
+h1 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--light-gray-blue);
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+ul {
+  list-style: none;
+}
+
+.score-container {
+  padding: 2rem;
+  /* background: var(--persian-blue); */
+  background: linear-gradient(
+    180deg,
+    var(--light-slate-blue),
+    var(--light-royal-blue)
+  );
+  border-radius: 0 0 30px 30px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.score-container > h3 {
+  text-align: center;
+  font-size: 1rem;
+  color: var(--light-lavender);
+}
+
+.score {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  /* border: 1px solid var(--white); */
+  background: var(--persian-blue);
+  background: linear-gradient(var(--violet-blue), var(--persian-blue));
+  /* position: relative; */
+  display: grid;
+  place-items: center;
+  align-content: center;
+  gap: 1rem;
+}
+
+.score-total {
+  font-size: 3.5rem;
+  line-height: 3.5rem;
+  font-weight: 700;
+  color: var(--white);
+  display: block;
+}
+
+.score-legend {
+  /* position: absolute; */
+  /* bottom: 20px; */
+  color: var(--light-lavender);
+  opacity: 0.8;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1rem;
+}
+
+.score-container > h2 {
+  font-size: 1.5rem;
+  color: var(--white);
+  text-align: center;
+  font-weight: 600;
+}
+
+.score-container > p {
+  font-size: 1rem;
+  color: var(--light-lavender);
+  text-align: center;
+  text-wrap: wrap;
+  padding: 10px;
+}
+
+.summary-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
+}
+
+.summary-container > h2 {
+  font-size: 1.2rem;
+  color: var(--light-gray-blue);
+  font-weight: 700;
+}
+
+.summary-container > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.summary-container > ul > li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background: var(--lighter-red);
+  border-radius: 8px;
+  padding: 1rem;
+}
+
+.literal {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.literal > span {
+  font-weight: 700;
+  color: var(--light-red);
+  padding-left: 1rem;
+}
+
+.numeral {
+  color: var(--light-gray-blue);
+}
+
+.light {
+  opacity: 0.5;
+  font-weight: 700;
+}
+
+.summary-container > button {
+  padding: 16px;
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
+  background-color: #303b59;
+  color: var(--white);
+  font-weight: 400;
+  font-size: 1.2rem;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.summary-container > button:hover {
+  background-color: var(--light-royal-blue);
 }
