--- a/css/styles.css
+++ b/css/styles.css
@@ -52,15 +52,13 @@ main {
   max-width: 370px;
   width: 100%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  /* border-radius: 30px; */
   background: var(--white);
 }
 
 h1 {
-  font-size: 1.5rem;
+  font-size: 0.8rem;
   font-weight: 700;
   color: var(--light-gray-blue);
-  margin-bottom: 1rem;
   text-align: center;
 }
 
@@ -112,8 +110,6 @@ ul {
 }
 
 .score-legend {
-  /* position: absolute; */
-  /* bottom: 20px; */
   color: var(--light-lavender);
   opacity: 0.8;
   font-weight: 700;
@@ -198,4 +194,69 @@ ul {
 
 .summary-container > button:hover {
   background-color: var(--light-royal-blue);
+}
+
+footer {
+  position: sticky;
+  bottom: 0;
+  background: var(--green-teal);
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 18px;
+  }
+
+  main {
+    flex-direction: row;
+    max-width: 700px;
+    border-radius: 30px;
+  }
+
+  .score-container {
+    width: 50%;
+    padding: 2.5rem;
+    border-radius: 30px;
+    gap: 2rem;
+  }
+
+  .score-container > h3 {
+    font-size: 1.4rem;
+  }
+
+  .score {
+    width: 200px;
+    height: 200px;
+  }
+
+  .score-total {
+    font-size: 4.5rem;
+    line-height: 4.5rem;
+  }
+
+  .score-container > h2 {
+    font-size: 2rem;
+  }
+
+  .score-container > p {
+    font-size: 1.2rem;
+    padding: 0;
+  }
+
+  .summary-container {
+    width: 50%;
+    padding: 2.5rem;
+    border-radius: 30px;
+    gap: 2rem;
+    flex: 1;
+  }
+
+  .summary-container > h2 {
+    font-size: 1.5rem;
+  }
+
+  .summary-container > ul {
+    gap: 1.3rem;
+  }
 }
