--- a/css/styles.css
+++ b/css/styles.css
@@ -189,11 +189,10 @@ ul {
   color: var(--white);
   font-weight: 400;
   font-size: 1.2rem;
-  transition: background-color 0.3s ease-in-out;
 }
 
 .summary-container > button:hover {
-  background-color: var(--light-royal-blue);
+  background: linear-gradient(var(--light-slate-blue), var(--light-royal-blue));
 }
 
 footer {
